--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,12 @@
         <module>eureka-service</module>
         <module>onfig-server</module>
         <module>config-server</module>
+        <module>gateway-service</module>
+        <module>inventory-service</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
     </properties>
 
     <parent>
